Fix autotools flags

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,8 +9,7 @@ usb_plugin_la_CFLAGS = \
 usb_plugin_la_LIBADD = \
 	$(LIBGUDEV_LIBS) $(LIBHILDONDESKTOP_LIBS)
 
-usb_plugin_la_LDFLAGS = -module -avoid-version \
-    -Wl,--as-needed
+usb_plugin_la_LDFLAGS = -Wl,--as-needed, -module -avoid-version
 
 hildonstatusmenudesktopentry_DATA = hildon-status-menu-usb.desktop
 EXTRA_DIST = $(hildonstatusmenudesktopentry_DATA)
